--- a/04-jquery-exercises/04-hangman/index.html
+++ b/04-jquery-exercises/04-hangman/index.html
@@ -9,7 +9,7 @@
 
   <!-- Page title -->
   <title>HTML5 basics</title>  
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="js/app.js"></script>
   
 </head>
@@ -20,9 +20,9 @@
   <h1>Hangman</h1>
 
   <div class="hman">
-    <img src="img/hman-0.png">
+    <img id ="hangmanImg" src="img/hman-0.png">
   </div>
-  <div id="secret-word">_ _ _ _</div>
+  <div id="secret-word"></div><br>
 
   <div id="msg"></div>
   
